lab/login/style.css
@import url("https://fonts.cdnfonts.com/css/jetbrains-mono");
@import url("https://fonts.cdnfonts.com/css/restless-soul-bb");
@import url("https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap");

.at {
  font-weight: bold;
  text-decoration: none;
  color: white;
}

.at:hover {
  background-image: none;
  background-color: white;
  color: var(--shade-3);
  outline-color: white;
  background-clip: unset;
  -webkit-text-fill-color: unset;
}

.untarget :target {
  outline-color: transparent;
}

.status-UsrBinAnnika {
  transform: rotate(-0.5deg);
}

.name-Rosy {
  color: var(--red);
  font-family: "JetBrains Mono", sans-serif;
}

.name-lord.cat {
  background: linear-gradient(to right, #c5a4ed, #a4a5ed 100%);
  -webkit-text-fill-color: transparent;
  background-clip: text;
  font-family: "UnifrakturMaguntia";
  font-size: 1.2em;
}

.at-lord.cat:hover {
  background-image: none;
  background-clip: unset;
  background-color: white;
  color: var(--shade-3);
  -webkit-text-fill-color: unset;
}

.name-Svenlaa {
  background: linear-gradient(to right, var(--yellow), var(--green) 200%);
  -webkit-text-fill-color: transparent;
  background-clip: text;
  font-family: "JetBrains Mono", sans-serif;
}

.name-HatsuSixty {
  background: linear-gradient(to right, var(--pink), var(--purple) 200%);
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.name-hivemind {
  background: linear-gradient(180deg, rgb(248 22 22) 20%, rgb(200 66 36) 100%);
  -webkit-text-fill-color: transparent;
  background-clip: text;
  font-family: "Restless Soul BB", sans-serif;
  font-size: 1.2em;
}

.name-TodePond {
  color: var(--green);
}

.name-TodePond::after {
  content: "ADMIN";
  border: 1px solid var(--green);
  padding: 0.1em 0.2em;
  margin: 0.35em;
  font-size: 0.6em;
  position: relative;
  top: -0.25em;
  font-weight: normal;
}

.at-TodePond.name-TodePond:hover::after {
  border-color: var(--shade-3);
}

.name-PodeTond.💚 {
  background: linear-gradient(
    to right,
    #eaacb8 20%,
    #7acbf5 80%,
    var(--green) 80%,
    var(--green) 100%
  );
  -webkit-text-fill-color: transparent;
  background-clip: text;
  display: inline-block; /* so it doesnt cut the heart */
  font-family: "JetBrains Mono", sans-serif;
}

@media (prefers-reduced-motion: no-preference) {
  .name-El {
    animation: 30s linear 0s infinite alternate el-color-shift;
  }
}
@keyframes el-color-shift {
  0% {
    color: lch(90% 90 209.2);
  }
  50% {
    color: lch(90% 90 431.4);
  }
  100% {
    color: lch(90% 90 368.7);
  }
}

.name-sofia {
  letter-spacing: 0.5em;
  color: transparent;
  background: linear-gradient(to bottom, #fff 50%, #80ff00 100%);
  background-clip: text;
  text-shadow: 0 0 0.125em #80ff0080;
}

.at-PodeTond.💚:hover {
  background-image: none;
  background-clip: unset;
  background-color: white;
  color: var(--shade-3);
  -webkit-text-fill-color: unset;
}

/* begin styling for user "minion" */
.post-minion {
  display: flex; /* needed so we can have a badge as well as an :after on the name */
  flex-wrap: wrap; /* in flexbox, brs do not work, so instead we wrap the flex */
}

.post-minion::before {
  content: "NOT ADMIN";
  border: 1px solid var(--minion-red);
  padding: 1px 2px;
  margin: 4px;
  font-size: 10px;
  position: relative;
  top: -1px; /* todepond's admin badge is -3px ... but presumably some of our flexbox messing around bumped us a pixel up */
  font-weight: normal;

  background-image: linear-gradient(
    120deg,
    transparent 30%,
    rgba(255, 200, 150, 0.5) 34%,
    transparent 60%
  );
  background-size: 50px;
  background-repeat: no-repeat;

  background-position: 200%;

  order: 2; /* the "true ordering" of the elements is [badge] [name] [post content], but we want to display as [name] [badge] [post content] */

  color: var(
    --minion-red
  ); /* as this isn't a true ::after of the name, we won't inherit its color... */
}

@media (prefers-reduced-motion: no-preference) {
  .post-minion::before {
    -webkit-animation: minion-badgeSwish 10s ease-in-out infinite;
    -moz-animation: minion-badgeSwish 10s ease-in-out infinite;
    animation: minion-badgeSwish 10s ease-in-out infinite;
  }
}

.post-minion,
.name-minion {
  --minion-red: #f27878;
}

.name-minion {
  color: var(--minion-red);
}

.name-minion::before {
  content: "✨";
  font-size: 0.5em;
}

.name-minion::after {
  content: "✨";
  font-size: 0.5em;
  vertical-align: top;
  padding-top: 0.1em;
  display: inline-block;
}

.post-minion .status-minion {
  order: 3;
  flex-basis: 100%; /* this ensures the post content will end up on a different line in the flex */
}

@-webkit-keyframes minion-badgeSwish {
  0% {
    background-position: 500px;
  }
  100% {
    background-position: -50px;
  }
}
@-moz-keyframes minion-badgeSwish {
  0% {
    background-position: 500px;
  }
  100% {
    background-position: -50px;
  }
}
@keyframes minion-badgeSwish {
  0% {
    background-position: 500px;
  }
  100% {
    background-position: -50px;
  }
}
/* end styling for user "minion". I am so sorry for the cursed-ness. */

.name-R74n {
  color: #00ffff;
}

